Add flake8 check to tox
Change-Id: I3c816c95187408a933241193e7c01e299176eccb

--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,17 @@
+[tox]
+minversion = 1.6
+skipsdist = True
+envlist = flake8
+
+[testenv:venv]
+commands = {posargs}
+
+[testenv:flake8]
+usedevelop = True
+basepython = python2.7
+commands = flake8 switchdc/
+deps = flake8
+
 [flake8]
 max-line-length=120
 statistics = True
