Allow to execute integration tests from tox
Bug: T160178
Change-Id: I2b9c513bcbeca7b2799312a5e0d5d37e492592c3

--- a/tox.ini
+++ b/tox.ini
@@ -12,3 +12,12 @@ deps = flake8
 [flake8]
 max-line-length=120
 statistics = True
+
+[testenv:integration]
+basepython = python2.7
+usedevelop = True
+deps =
+  .
+  .[test]
+
+commands = nosetests switchdc/tests
